# jedi-council

./: .coverage  .gitignore  LICENSE  README.md  demo.cast  example.py  pyproject.toml
.github/workflows/: CI.yml
benchmark_runs/: benchmark_20250729_182123.csv
benchmarking/: benchmark_suite.py
jedi_council/: core.py
jedi_council/utils/: council_log.py  utils.py
notebooks/: analyze.ipynb  example_usage.ipynb
tests/: test_cost_estimator.py  test_logging.py  test_mocked.py
