[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TheJediCouncil"
version = "0.1.0"
authors = [
  { name="Avdhoot Patil", email="avdhootpatil245@gmail.com" },
]
description = "A unified LLM wrapper to query different models, as if consulting the Jedi Council."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "anthropic",
    "google-generativeai",
    "python-dotenv",
    "mistralai"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-cov",         # For coverage reporting (optional)
  "ruff"                # For linting (optional)
]
#you could use pip install -e .[dev] if you're contributing and running CI.

[tool.setuptools]
packages = ["jedi_council"]